# doc2text_extractor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  clean.sh  docker-compose.yml  lint.sh  migrate_jobs.py  pyproject.toml  test.sh  test_api.py  test_cli.py
api/: __init__.py  config.py  dependencies.py  main.py  models.py
api/routes/: extraction.py  jobs.py
cli/: __init__.py  client.py
core/: __init__.py  database.py  file_manager.py  job_manager.py
core/extractors/: __init__.py  base.py  docx_extractor.py  markdown_extractor.py  pdf_extractor.py  xlsx_extractor.py
data/: jobs.db
tests/: test_api.py  test_extractors.py
tests/test_files/: Channai_Madurai.xlsx  Chennai_Madurai_Guide_10page.docx  sample.md
